# Smart-Code-Engine-SDK

./: README.md
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/doc/: best_practices.html
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/include/codeengine/: code_engine.h  code_engine_feedback.h  code_engine_session_settings.h
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/samples/codeengine_sample/: codeengine_sample.cpp
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/samples/codeengine_sample_cs/: App.config
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/samples/codeengine_sample_java/: CodeEngineSample.java  build_codeengine_sample_java.sh
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Ubuntu18.04/samples/codeengine_sample_python/: codeengine.i
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/: readme.txt
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/doc/: README.html  WHATSNEW.txt  best_practices.html
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/include/codeengine/: code_engine.h  code_engine_feedback.h  code_engine_result.h  code_engine_session.h  code_engine_session_settings.h  code_object.h  code_object_field.h
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/lib/: codeengine.lib  jnicodeengine.lib
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/samples/codeengine_sample/: codeengine_sample.cpp  codeengine_sample_x64.vcxproj
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/samples/codeengine_sample_cs/: App.config  CodeEngineSampleCs.cs  codeengine_sample_cs_x64.csproj
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/samples/codeengine_sample_java/: CodeEngineSample.java  build_codeengine_sample_java.bat
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-Win64/samples/codeengine_sample_python/: CMakeLists.txt  README.txt  codeengine.i  codeengine_sample.py
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-iOS/SESmartCode/: SmartCode-Bridging-Header.h
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-iOS/SESmartCode/Controller/: SmartCodeViewController.h  SmartCodeViewController.mm
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-iOS/SESmartCode/Core/: SmartCodeEngineInstance.h  SmartCodeEngineInstance.mm
Smart-Code-Engine-2.5.0-Full-bundle_codeengine-embedded-iOS/doc/: README.html  WHATSNEW.txt
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-Android/include/codeengine/: code_engine.h  code_engine_feedback.h
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-MacOS/doc/: README.html
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-MacOS/include/codeengine/: code_engine_session.h
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-Ubuntu18.04/: readme.txt
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-Ubuntu18.04/samples/codeengine_sample_cs/: CMakeLists.txt  cscodeengine.i
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-Win64/doc/: WHATSNEW.txt
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-Win64/lib/: cscodeengine.lib
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-dynAct-semock-wasm/: wasm_notice.txt  wasm_sample_server.py
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-dynAct-semock-wasm/doc/: build.txt
Smart-Code-Engine-2.6.0.stripped-Full-bundle_mock_codeengine-embedded-iOS/: readme.txt
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-Android/: readme.txt
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-MacOS/doc/: WHATSNEW.txt
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-Ubuntu18.04/doc/: build.txt
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-Win64/: readme.txt
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-Win64/doc/: README.html
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-Win64/lib/: jnicodeengine.lib
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-dynAct-semock-wasm/doc/: README.html
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-iOS/SESmartCode/: SmartCode-Bridging-Header.h
Smart-Code-Engine-2.7.0.stripped-Full-bundle_mock_codeengine-embedded-iOS/doc/: best_practices.html
(+183 files in other folders)
